# paper2md

./: .gitignore  README.md  pyproject.toml
250819_svTheory_md/: paper.md
dot_guessing_game_md/: paper.html  paper.md
dot_guessing_game_md/.claude/agents/: investigate-issue.md
dot_guessing_game_md/.claude/skills/add-spotter/: SKILL.md
dot_guessing_game_md/.claude/skills/broad-sweep/: SKILL.md
dot_guessing_game_md/.claude/skills/deduplicate/: SKILL.md
dot_guessing_game_md/.claude/skills/draft-responses/: SKILL.md
dot_guessing_game_md/.claude/skills/holistic-review/: SKILL.md
dot_guessing_game_md/.claude/skills/investigate/: SKILL.md
dot_guessing_game_md/.claude/skills/publish-review/: SKILL.md
dot_guessing_game_md/.claude/skills/review-paper/: SKILL.md
dot_guessing_game_md/.claude/skills/setup-review/: SKILL.md
dot_guessing_game_md/.claude/skills/vote-severity/: SKILL.md
dot_guessing_game_md/.review/issue_spotters/: identification_strategy.md  internal_contradictions.md  logical_gaps.md  mathematical_errors.md  methodology_errors.md  overclaiming.md  threats_to_validity.md  undefined_symbols.md
paper2md/: __main__.py  cli.py  converter.py  reducto.py
